--- a/WishFlow/Info.plist
+++ b/WishFlow/Info.plist
@@ -6,5 +6,12 @@
 	<string>$(STRAPI_BASE_URL)</string>
 	<key>STRAPI_TOKEN</key>
 	<string>$(STRAPI_TOKEN)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>YesevaOne-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
