--- a/WishFlow/Info.plist
+++ b/WishFlow/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>be.MeesAkveld.WishFlow</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wishflow</string>
+			</array>
+		</dict>
+	</array>
 	<key>STRAPI_BASE_URL</key>
 	<string>$(STRAPI_BASE_URL)</string>
 	<key>STRAPI_TOKEN</key>
