--- a/WishFlow/Info.plist
+++ b/WishFlow/Info.plist
@@ -26,5 +26,9 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>YesevaOne-Regular.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
